---
source: wasm_utils/tests/instrumentation.rs
expression: out
---
(module
  (type (;0;) (func))
  (type (;1;) (func (param i32 i32) (result i32)))
  (type (;2;) (func (param i64)))
  (type (;3;) (func (result i64)))
  (type (;4;) (func (param i32) (result i32)))
  (import "__" "out_of_instructions" (func (;0;) (type 0)))
  (import "__" "update_available_memory" (func (;1;) (type 1)))
  (func (;2;) (type 2) (param i64)
    local.get 0
    global.set 4)
  (func (;3;) (type 3) (result i64)
    global.get 4)
  (func (;4;) (type 4) (param i32) (result i32)
    global.get 4
    local.get 0
    i64.extend_i32_u
    i64.lt_s
    if  ;; label = @1
      call 0
    end
    global.get 4
    local.get 0
    i64.extend_i32_u
    i64.sub
    global.set 4
    local.get 0)
  (global (;0;) (mut i32) (i32.const 0))
  (global (;1;) i32 (i32.const 1))
  (global (;2;) i32 (i32.const 2))
  (global (;3;) (mut i32) (i32.const 3))
  (global (;4;) (mut i64) (i64.const 0))
  (export "_g_0" (global 0))
  (export "_g_1" (global 1))
  (export "__persistent_mutable_global_3" (global 3))
  (export "canister counter_set" (func 2))
  (export "canister counter_get" (func 3))
  (export "canister counter_instructions" (global 4)))

